<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="edu.ufal.ic.toolbox.LoginActivity"
    android:weightSum="1">


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewName"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />

    <TextView
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewFone"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewEmail"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.30" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EnviarEmail"
        android:id="@+id/textViewEnviarEmail"
        android:layout_weight="0.08" />


    <AutoCompleteTextView
        android:id="@+id/emailRemetente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Seutelefone"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textoEmail"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText" />

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviarEmail"
        android:id="@+id/btnEnviarEmail"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>